@@ -8,6 +8,7 @@ import static org.mockito.BDDMockito.given;
 import java.util.Arrays;
 import java.util.List;
 
+import deepdivers.community.domain.post.repository.PostQueryRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -38,129 +39,192 @@ import io.restassured.module.mockmvc.RestAssuredMockMvc;
 class PostOpenControllerTest extends ControllerTest {
 
 	@MockBean
-	private PostService postService; // PostService를 MockBean으로 선언
+	private PostService postService;
 
-	private MockMvc mockMvc; // MockMvc 필드 선언
-	private PostReadResponse mockPostResponse;
+	@MockBean
+	private PostQueryRepository postQueryRepository;
 
 	@BeforeEach
-	void setUp(WebApplicationContext webApplicationContext) throws Exception {
-		mockMvc = MockMvcBuilders.webAppContextSetup(webApplicationContext).build();
-		RestAssuredMockMvc.mockMvc(mockMvc);
-
-		// 게시글 조회 시 사용할 mock 데이터 생성
-		mockPostResponse = new PostReadResponse(
-			1L,                    // postId
-			"게시글 제목",            // title
-			"게시글 내용",            // content
-			1L,                    // categoryId (예시로 ID 추가)
-			new MemberInfo(1L, "작성자 닉네임", "이미지 URL", "개발자"), // memberJob 추가
-			new CountInfo(100, 50, 10), // countInfo
-			Arrays.asList("해시태그1", "해시태그2"), // 해시태그 추가
-			"2024-09-26T12:00:00" // createdAt (예시)
-		);
+	void setUp(WebApplicationContext webApplicationContext) {
+		RestAssuredMockMvc.webAppContextSetup(webApplicationContext);
 	}
 
-	// 비회원 게시글 조회 성공 테스트
 	@Test
-	@DisplayName("비회원 게시글 조회가 성공적으로 처리되면 200 OK와 게시글 정보를 반환한다")
-	void getPostByIdSuccessfullyReturns200OKForOpen() {
+	@DisplayName("게시글 상세 조회 요청이 성공적으로 처리되면 200 OK와 함께 응답을 반환한다")
+	void getPostByIdSuccessfullyReturns200OK() {
 		// given
-		given(postService.getPostById(anyLong(), anyString())).willReturn(mockPostResponse);
+		Long postId = 1L;
+		String clientIp = "127.0.0.1";
+		PostReadResponse responseBody = new PostReadResponse(
+				postId,
+				"Post Title",
+				"Post Content",
+				1L,
+				new MemberInfo(1L, "작성자 닉네임", "이미지 URL", "개발자"),
+				new CountInfo(100, 50, 10),
+				List.of("tag1", "tag2"),
+				"2024-09-26T12:00:00"
+		);
+		API<PostReadResponse> mockResponse = API.of(PostStatusType.POST_VIEW_SUCCESS, responseBody);
+
+		given(postService.readPostDetail(eq(postId), eq(clientIp))).willReturn(responseBody);
 
 		// when
-		API<PostReadResponse> response = RestAssuredMockMvc
-			.given().log().all()
-			.header("X-Forwarded-For", "127.0.0.1")  // IP 주소
-			.contentType(MediaType.APPLICATION_JSON)
-			.when().get("/open/posts/1")
-			.then().log().all()
-			.status(HttpStatus.OK) // 200 OK 반환 기대
-			.extract()
-			.as(new TypeRef<API<PostReadResponse>>() {});  // API<PostReadResponse>로 직접 변환
+		API<PostReadResponse> response = RestAssuredMockMvc.given().log().all()
+				.when().get("/open/posts/{postId}", String.valueOf(postId))
+				.then().log().all()
+				.status(HttpStatus.OK)
+				.extract()
+				.as(new TypeRef<>() {
+				});
 
 		// then
-		PostReadResponse postResponse = response.getResult();  // getResult()로 PostReadResponse 추출
+		PostReadResponse postResponse = response.getResult();
 		assertThat(postResponse).isNotNull();
-		assertThat(postResponse.title()).isEqualTo("게시글 제목");
-		assertThat(postResponse.categoryId()).isEqualTo(1L); // categoryId 검증
-		assertThat(postResponse.memberInfo().getNickname()).isEqualTo("작성자 닉네임");// 작성자 닉네임 검증
+		assertThat(postResponse.title()).isEqualTo("Post Title");
+		assertThat(postResponse.categoryId()).isEqualTo(1L);
+		assertThat(postResponse.memberInfo().getNickname()).isEqualTo("작성자 닉네임");
 		assertThat(postResponse.countInfo().getViewCount()).isEqualTo(100);
 		assertThat(postResponse.countInfo().getLikeCount()).isEqualTo(50);
 		assertThat(postResponse.countInfo().getCommentCount()).isEqualTo(10);
-		assertThat(postResponse.hashtags()).containsExactly("해시태그1", "해시태그2"); // 해시태그 검증
-		assertThat(postResponse.createdAt()).isEqualTo("2024-09-26T12:00:00"); // 생성일 검증
+		assertThat(postResponse.hashtags()).containsExactly("tag1", "tag2");
+		assertThat(postResponse.createdAt()).isEqualTo("2024-09-26T12:00:00");
 	}
 
-	// 존재하지 않는 게시글 조회 테스트
 	@Test
-	@DisplayName("존재하지 않는 게시글 조회 시 400 Bad Request를 반환한다")
-	void getPostByIdNotFoundReturns400ForOpen() {
+	@DisplayName("존재하지 않는 게시글 ID로 조회 요청을 하면 400 BAD REQUEST를 반환한다")
+	void getPostByInvalidIdReturns400BAD_REQUEST() {
 		// given
-		given(postService.getPostById(anyLong(), anyString()))
-			.willThrow(new BadRequestException(PostExceptionType.POST_NOT_FOUND));
+		Long invalidPostId = 999L;
+		String clientIp = "127.0.0.1";
+
+		given(postService.readPostDetail(eq(invalidPostId), eq(clientIp)))
+				.willThrow(new BadRequestException(PostExceptionType.POST_NOT_FOUND));
 
 		// when, then
-		RestAssuredMockMvc
-			.given().log().all()
-			.header("X-Forwarded-For", "127.0.0.1")  // IP 주소
-			.contentType(MediaType.APPLICATION_JSON)
-			.when().get("/open/posts/999")
-			.then().log().all()
-			.status(HttpStatus.BAD_REQUEST) // 400 Bad Request 기대
-			.body("code", equalTo(PostExceptionType.POST_NOT_FOUND.getCode()))
-			.body("message", equalTo(PostExceptionType.POST_NOT_FOUND.getMessage()));
+		RestAssuredMockMvc.given().log().all()
+				.when().get("/open/posts/{postId}", String.valueOf(invalidPostId))
+				.then().log().all()
+				.status(HttpStatus.BAD_REQUEST)
+				.body("message", containsString("게시글을 찾을 수 없습니다."));
 	}
 
 	@Test
-	@DisplayName("전체 게시글 조회가 성공적으로 처리되면 200 OK와 게시글 목록을 반환한다")
+	@DisplayName("모든 게시글 조회 요청이 성공적으로 처리되면 200 OK와 함께 응답을 반환한다")
 	void getAllPostsSuccessfullyReturns200OK() {
 		// given
-		List<PostAllReadResponse> mockPostList = Arrays.asList(
-			createMockPost(1L, "게시글 제목 1", "게시글 내용 1", "작성자 닉네임 1", "이미지 URL 1", new CountInfo(100, 50, 10), Arrays.asList("해시태그1", "해시태그2"), "2024-09-26T12:00:00"),
-			createMockPost(2L, "게시글 제목 2", "게시글 내용 2", "작성자 닉네임 2", "이미지 URL 2", new CountInfo(200, 100, 20), Arrays.asList("해시태그3", "해시태그4"), "2024-09-27T12:00:00"),
-			createMockPost(3L, "게시글 제목 3", "게시글 내용 3", "작성자 닉네임 3", "이미지 URL 3", new CountInfo(300, 150, 30), Arrays.asList("해시태그5", "해시태그6"), "2024-09-28T12:00:00")
+		Long lastPostId = 10L;
+		Long categoryId = 1L;
+
+		List<PostAllReadResponse> responseList = List.of(
+				new PostAllReadResponse(
+						1L,
+						"Title 1",
+						"Content 1",
+						categoryId,
+						new MemberInfo(1L, "Author 1", "author1.png", "Developer"),
+						new CountInfo(10, 5, 2),
+						List.of("tag1", "tag2"),
+						"2023-11-15 12:00:00"
+				),
+				new PostAllReadResponse(
+						2L,
+						"Title 2",
+						"Content 2",
+						categoryId,
+						new MemberInfo(2L, "Author 2", "author2.png", "Designer"),
+						new CountInfo(20, 15, 5),
+						List.of("tag3"),
+						"2023-11-15 13:00:00"
+				)
 		);
 
-		PostCountResponse postCountResponse = new PostCountResponse(3L, mockPostList); // 게시글 총 개수와 목록 설정
-		API<PostCountResponse> mockApiResponse = API.of(PostStatusType.POST_VIEW_SUCCESS, postCountResponse);
-
-		// Mocking the service method to return the mock API response
-		given(postService.getAllPosts(anyLong(), any())).willReturn(mockApiResponse);
+		given(postQueryRepository.findAllPosts(eq(lastPostId), eq(categoryId))).willReturn(responseList);
 
 		// when
-		API<PostCountResponse> response = RestAssuredMockMvc
-			.given().log().all()
-			.header("X-Forwarded-For", "127.0.0.1")  // IP 주소
-			.contentType(MediaType.APPLICATION_JSON)
-			.when().get("/open/posts") // Assuming the endpoint for all posts is "/open/posts"
-			.then().log().all()
-			.status(HttpStatus.OK) // 200 OK 반환 기대
-			.extract()
-			.as(new TypeRef<API<PostCountResponse>>() {});  // API<PostCountResponse>로 직접 변환
+		API<List<PostAllReadResponse>> response = RestAssuredMockMvc.given().log().all()
+				.queryParam("categoryId", categoryId)
+				.queryParam("lastPostId", lastPostId)
+				.when().get("/open/posts")
+				.then().log().all()
+				.status(HttpStatus.OK)
+				.extract()
+				.as(new TypeRef<>() {
+				});
 
 		// then
-		PostCountResponse postResponses = response.getResult();  // getResult()로 PostCountResponse 추출
-		assertThat(postResponses).isNotNull();
-		assertThat(postResponses.getPosts().size()).isEqualTo(3); // Verify size of the list is now 3
-
-		// Verify content of the posts
-		assertThat(postResponses.getPosts().get(0).getTitle()).isEqualTo("게시글 제목 1");
-		assertThat(postResponses.getPosts().get(1).getTitle()).isEqualTo("게시글 제목 2");
-		assertThat(postResponses.getPosts().get(2).getTitle()).isEqualTo("게시글 제목 3");
+		List<PostAllReadResponse> posts = response.getResult();
+		assertThat(posts).isNotNull();
+		assertThat(posts).hasSize(2);
 	}
 
-	// Mock 데이터 생성 메서드
-	private PostAllReadResponse createMockPost(Long postId, String title, String content, String nickname, String imageUrl, CountInfo countInfo, List<String> hashtags, String createdAt) {
-		return new PostAllReadResponse(
-			postId,
-			title,
-			content,
-			1L, // categoryId (예시로 고정)
-			new MemberInfo(postId, nickname, imageUrl, "개발자"), // memberJob 추가
-			countInfo,
-			hashtags,
-			createdAt
+
+	@Test
+	@DisplayName("카테고리 ID나 마지막 게시글 ID 없이 게시글 조회 요청이 성공적으로 처리되면 200 OK를 반환하고 결과를 검증한다")
+	void getAllPostsWithoutParamsReturns200OK() {
+		// given
+		List<PostAllReadResponse> responseList = List.of(
+				new PostAllReadResponse(
+						1L,
+						"Title 1",
+						"Content 1",
+						1L,
+						new MemberInfo(1L, "Author 1", "author1.png", "Developer"),
+						new CountInfo(10, 5, 2),
+						List.of("tag1", "tag2"),
+						"2024-09-26T12:00:00"
+				)
 		);
+
+		given(postQueryRepository.findAllPosts(null, null)).willReturn(responseList);
+
+		// when
+		API<List<PostAllReadResponse>> response = RestAssuredMockMvc.given().log().all()
+				.when().get("/open/posts")
+				.then().log().all()
+				.status(HttpStatus.OK)
+				.extract()
+				.as(new TypeRef<>() {
+				});
+
+		// then
+		List<PostAllReadResponse> posts = response.getResult();
+		assertThat(posts).isNotNull();
+		assertThat(posts).hasSize(1);
+
+		PostAllReadResponse post = posts.get(0);
+		assertThat(post.getPostId()).isEqualTo(1L);
+		assertThat(post.getTitle()).isEqualTo("Title 1");
+		assertThat(post.getContent()).isEqualTo("Content 1");
+		assertThat(post.getCategoryId()).isEqualTo(1L);
+		assertThat(post.getMemberInfo().getNickname()).isEqualTo("Author 1");
+		assertThat(post.getCountInfo().getViewCount()).isEqualTo(10);
+		assertThat(post.getCountInfo().getLikeCount()).isEqualTo(5);
+		assertThat(post.getCountInfo().getCommentCount()).isEqualTo(2);
+		assertThat(post.getHashtags()).containsExactly("tag1", "tag2");
+		assertThat(post.getCreatedAt()).isEqualTo("2024-09-26T12:00:00");
 	}
+
+	@Test
+	@DisplayName("게시글 조회 요청 시 데이터베이스에 데이터가 없을 경우 빈 목록을 반환한다")
+	void getAllPostsWithNoDataReturnsEmptyList() {
+		// given
+		given(postQueryRepository.findAllPosts(null, null)).willReturn(List.of());
+
+		// when
+		API<List<PostAllReadResponse>> response = RestAssuredMockMvc.given().log().all()
+				.when().get("/open/posts")
+				.then().log().all()
+				.status(HttpStatus.OK)
+				.extract()
+				.as(new TypeRef<>() {
+				});
+
+		// then
+		List<PostAllReadResponse> posts = response.getResult();
+		assertThat(posts).isNotNull();
+		assertThat(posts).isEmpty();
+	}
+
 }
+
